bin/compilador/y.output
   0  $accept : programa $end

   1  programa : bloquePrograma

   2  bloquePrograma : bloquePrograma sentenciaDeclarativa
   3                 | bloquePrograma sentenciaEjecutable
   4                 | sentenciaDeclarativa
   5                 | sentenciaEjecutable

   6  sentenciaDeclarativa : tipo listaVariables ';'
   7                       | declaracionProcedimiento
   8                       | error listaVariables ';'

   9  listaVariables : listaVariables ',' identificador
  10                 | identificador
  11                 | error

  12  declaracionProcedimiento : encabezadoProc bloqueProc

  13  encabezadoProc : PROC identificador '(' parametrosProc ')' NA '=' CTE ',' NS '=' CTE
  14                 | PROC identificador '(' ')' NA '=' CTE ',' NS '=' CTE
  15                 | PROC identificador '(' error ')' NA '=' CTE ',' NS '=' CTE

  16  parametrosProc : parametro
  17                 | parametro ',' parametro
  18                 | parametro ',' parametro ',' parametro

  19  parametro : tipo identificador
  20            | error identificador

  21  bloqueProc : '{' bloque '}'
  22             | '{' error '}'

  23  bloque : bloque sentenciaDeclarativa
  24         | bloque sentenciaEjecutable
  25         | sentenciaDeclarativa
  26         | sentenciaEjecutable

  27  sentenciaEjecutable : asignacion
  28                      | OUT '(' CADENA ')' ';'
  29                      | identificador '(' parametrosProc ')' ';'
  30                      | identificador '(' ')' ';'
  31                      | IF cuerpoIf
  32                      | cicloFor
  33                      | OUT '(' error ')' ';'
  34                      | IF error

  35  cicloFor : FOR '(' condicionFor ')' '{' bloqueSentencia '}'
  36           | FOR '(' error ')' '{' bloqueSentencia '}'
  37           | FOR '(' condicionFor ')' '{' error '}'

  38  condicionFor : inicioFor ';' condiFOR ';' incDec

  39  condiFOR : condicion

  40  inicioFor : identificador '=' constante

  41  condicion : identificador comparador asignacion
  42            | identificador comparador identificador
  43            | identificador comparador constante

  44  incDec : UP constante
  45         | DOWN constante

  46  bloqueSentencia : bloqueSentencia sentenciaEjecutable
  47                  | sentenciaEjecutable

  48  cuerpoIf : cuerpoCompleto END_IF
  49           | cuerpoIncompleto END_IF

  50  cuerpoCompleto : '(' condicionIf ')' '{' bloqueThen '}' ELSE '{' bloqueElse '}'

  51  condicionIf : condicion

  52  bloqueThen : bloqueSentencia

  53  bloqueElse : bloqueSentencia

  54  cuerpoIncompleto : '(' condicionIf ')' '{' bloqueThen '}'

  55  asignacion : identificador '=' expresion ';'

  56  expresion : expresion '+' termino
  57            | expresion '-' termino
  58            | termino

  59  termino : termino '*' factor
  60          | termino '/' factor
  61          | factor

  62  factor : constante
  63         | identificador

  64  comparador : "<="
  65             | ">="
  66             | "!="
  67             | "=="
  68             | '>'
  69             | '<'

  70  tipo : FLOAT
  71       | INTEGER

  72  identificador : ID

  73  constante : CTE
  74            | '-' CTE

state 0
	$accept : . programa $end  (0)

	error  shift 1
	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	INTEGER  shift 6
	FLOAT  shift 7
	PROC  shift 8
	.  error

	programa  goto 9
	bloquePrograma  goto 10
	sentenciaDeclarativa  goto 11
	sentenciaEjecutable  goto 12
	tipo  goto 13
	declaracionProcedimiento  goto 14
	identificador  goto 15
	encabezadoProc  goto 16
	asignacion  goto 17
	cicloFor  goto 18


state 1
	sentenciaDeclarativa : error . listaVariables ';'  (8)

	error  shift 19
	ID  shift 2
	.  error

	listaVariables  goto 20
	identificador  goto 21


state 2
	identificador : ID .  (72)

	.  reduce 72


state 3
	sentenciaEjecutable : IF . cuerpoIf  (31)
	sentenciaEjecutable : IF . error  (34)

	error  shift 22
	'('  shift 23
	.  error

	cuerpoIf  goto 24
	cuerpoCompleto  goto 25
	cuerpoIncompleto  goto 26


state 4
	sentenciaEjecutable : OUT . '(' CADENA ')' ';'  (28)
	sentenciaEjecutable : OUT . '(' error ')' ';'  (33)

	'('  shift 27
	.  error


state 5
	cicloFor : FOR . '(' condicionFor ')' '{' bloqueSentencia '}'  (35)
	cicloFor : FOR . '(' error ')' '{' bloqueSentencia '}'  (36)
	cicloFor : FOR . '(' condicionFor ')' '{' error '}'  (37)

	'('  shift 28
	.  error


state 6
	tipo : INTEGER .  (71)

	.  reduce 71


state 7
	tipo : FLOAT .  (70)

	.  reduce 70


state 8
	encabezadoProc : PROC . identificador '(' parametrosProc ')' NA '=' CTE ',' NS '=' CTE  (13)
	encabezadoProc : PROC . identificador '(' ')' NA '=' CTE ',' NS '=' CTE  (14)
	encabezadoProc : PROC . identificador '(' error ')' NA '=' CTE ',' NS '=' CTE  (15)

	ID  shift 2
	.  error

	identificador  goto 29


state 9
	$accept : programa . $end  (0)

	$end  accept


state 10
	programa : bloquePrograma .  (1)
	bloquePrograma : bloquePrograma . sentenciaDeclarativa  (2)
	bloquePrograma : bloquePrograma . sentenciaEjecutable  (3)

	error  shift 1
	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	INTEGER  shift 6
	FLOAT  shift 7
	PROC  shift 8
	$end  reduce 1

	sentenciaDeclarativa  goto 30
	sentenciaEjecutable  goto 31
	tipo  goto 13
	declaracionProcedimiento  goto 14
	identificador  goto 15
	encabezadoProc  goto 16
	asignacion  goto 17
	cicloFor  goto 18


state 11
	bloquePrograma : sentenciaDeclarativa .  (4)

	.  reduce 4


state 12
	bloquePrograma : sentenciaEjecutable .  (5)

	.  reduce 5


state 13
	sentenciaDeclarativa : tipo . listaVariables ';'  (6)

	error  shift 19
	ID  shift 2
	.  error

	listaVariables  goto 32
	identificador  goto 21


state 14
	sentenciaDeclarativa : declaracionProcedimiento .  (7)

	.  reduce 7


state 15
	sentenciaEjecutable : identificador . '(' parametrosProc ')' ';'  (29)
	sentenciaEjecutable : identificador . '(' ')' ';'  (30)
	asignacion : identificador . '=' expresion ';'  (55)

	'('  shift 33
	'='  shift 34
	.  error


state 16
	declaracionProcedimiento : encabezadoProc . bloqueProc  (12)

	'{'  shift 35
	.  error

	bloqueProc  goto 36


state 17
	sentenciaEjecutable : asignacion .  (27)

	.  reduce 27


state 18
	sentenciaEjecutable : cicloFor .  (32)

	.  reduce 32


state 19
	listaVariables : error .  (11)

	.  reduce 11


state 20
	sentenciaDeclarativa : error listaVariables . ';'  (8)
	listaVariables : listaVariables . ',' identificador  (9)

	';'  shift 37
	','  shift 38
	.  error


state 21
	listaVariables : identificador .  (10)

	.  reduce 10


state 22
	sentenciaEjecutable : IF error .  (34)

	.  reduce 34


state 23
	cuerpoCompleto : '(' . condicionIf ')' '{' bloqueThen '}' ELSE '{' bloqueElse '}'  (50)
	cuerpoIncompleto : '(' . condicionIf ')' '{' bloqueThen '}'  (54)

	ID  shift 2
	.  error

	identificador  goto 39
	condicion  goto 40
	condicionIf  goto 41


state 24
	sentenciaEjecutable : IF cuerpoIf .  (31)

	.  reduce 31


state 25
	cuerpoIf : cuerpoCompleto . END_IF  (48)

	END_IF  shift 42
	.  error


state 26
	cuerpoIf : cuerpoIncompleto . END_IF  (49)

	END_IF  shift 43
	.  error


state 27
	sentenciaEjecutable : OUT '(' . CADENA ')' ';'  (28)
	sentenciaEjecutable : OUT '(' . error ')' ';'  (33)

	error  shift 44
	CADENA  shift 45
	.  error


state 28
	cicloFor : FOR '(' . condicionFor ')' '{' bloqueSentencia '}'  (35)
	cicloFor : FOR '(' . error ')' '{' bloqueSentencia '}'  (36)
	cicloFor : FOR '(' . condicionFor ')' '{' error '}'  (37)

	error  shift 46
	ID  shift 2
	.  error

	identificador  goto 47
	condicionFor  goto 48
	inicioFor  goto 49


state 29
	encabezadoProc : PROC identificador . '(' parametrosProc ')' NA '=' CTE ',' NS '=' CTE  (13)
	encabezadoProc : PROC identificador . '(' ')' NA '=' CTE ',' NS '=' CTE  (14)
	encabezadoProc : PROC identificador . '(' error ')' NA '=' CTE ',' NS '=' CTE  (15)

	'('  shift 50
	.  error


state 30
	bloquePrograma : bloquePrograma sentenciaDeclarativa .  (2)

	.  reduce 2


state 31
	bloquePrograma : bloquePrograma sentenciaEjecutable .  (3)

	.  reduce 3


state 32
	sentenciaDeclarativa : tipo listaVariables . ';'  (6)
	listaVariables : listaVariables . ',' identificador  (9)

	';'  shift 51
	','  shift 38
	.  error


state 33
	sentenciaEjecutable : identificador '(' . parametrosProc ')' ';'  (29)
	sentenciaEjecutable : identificador '(' . ')' ';'  (30)

	error  shift 52
	INTEGER  shift 6
	FLOAT  shift 7
	')'  shift 53
	.  error

	tipo  goto 54
	parametrosProc  goto 55
	parametro  goto 56


state 34
	asignacion : identificador '=' . expresion ';'  (55)

	ID  shift 2
	CTE  shift 57
	'-'  shift 58
	.  error

	identificador  goto 59
	constante  goto 60
	expresion  goto 61
	termino  goto 62
	factor  goto 63


state 35
	bloqueProc : '{' . bloque '}'  (21)
	bloqueProc : '{' . error '}'  (22)

	error  shift 64
	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	INTEGER  shift 6
	FLOAT  shift 7
	PROC  shift 8
	.  error

	sentenciaDeclarativa  goto 65
	sentenciaEjecutable  goto 66
	tipo  goto 13
	declaracionProcedimiento  goto 14
	identificador  goto 15
	encabezadoProc  goto 16
	bloque  goto 67
	asignacion  goto 17
	cicloFor  goto 18


state 36
	declaracionProcedimiento : encabezadoProc bloqueProc .  (12)

	.  reduce 12


state 37
	sentenciaDeclarativa : error listaVariables ';' .  (8)

	.  reduce 8


state 38
	listaVariables : listaVariables ',' . identificador  (9)

	ID  shift 2
	.  error

	identificador  goto 68


state 39
	condicion : identificador . comparador asignacion  (41)
	condicion : identificador . comparador identificador  (42)
	condicion : identificador . comparador constante  (43)

	"<="  shift 69
	">="  shift 70
	"!="  shift 71
	"=="  shift 72
	'>'  shift 73
	'<'  shift 74
	.  error

	comparador  goto 75


state 40
	condicionIf : condicion .  (51)

	.  reduce 51


state 41
	cuerpoCompleto : '(' condicionIf . ')' '{' bloqueThen '}' ELSE '{' bloqueElse '}'  (50)
	cuerpoIncompleto : '(' condicionIf . ')' '{' bloqueThen '}'  (54)

	')'  shift 76
	.  error


state 42
	cuerpoIf : cuerpoCompleto END_IF .  (48)

	.  reduce 48


state 43
	cuerpoIf : cuerpoIncompleto END_IF .  (49)

	.  reduce 49


state 44
	sentenciaEjecutable : OUT '(' error . ')' ';'  (33)

	')'  shift 77
	.  error


state 45
	sentenciaEjecutable : OUT '(' CADENA . ')' ';'  (28)

	')'  shift 78
	.  error


state 46
	cicloFor : FOR '(' error . ')' '{' bloqueSentencia '}'  (36)

	')'  shift 79
	.  error


state 47
	inicioFor : identificador . '=' constante  (40)

	'='  shift 80
	.  error


state 48
	cicloFor : FOR '(' condicionFor . ')' '{' bloqueSentencia '}'  (35)
	cicloFor : FOR '(' condicionFor . ')' '{' error '}'  (37)

	')'  shift 81
	.  error


state 49
	condicionFor : inicioFor . ';' condiFOR ';' incDec  (38)

	';'  shift 82
	.  error


state 50
	encabezadoProc : PROC identificador '(' . parametrosProc ')' NA '=' CTE ',' NS '=' CTE  (13)
	encabezadoProc : PROC identificador '(' . ')' NA '=' CTE ',' NS '=' CTE  (14)
	encabezadoProc : PROC identificador '(' . error ')' NA '=' CTE ',' NS '=' CTE  (15)

	error  shift 83
	INTEGER  shift 6
	FLOAT  shift 7
	')'  shift 84
	.  error

	tipo  goto 54
	parametrosProc  goto 85
	parametro  goto 56


state 51
	sentenciaDeclarativa : tipo listaVariables ';' .  (6)

	.  reduce 6


state 52
	parametro : error . identificador  (20)

	ID  shift 2
	.  error

	identificador  goto 86


state 53
	sentenciaEjecutable : identificador '(' ')' . ';'  (30)

	';'  shift 87
	.  error


state 54
	parametro : tipo . identificador  (19)

	ID  shift 2
	.  error

	identificador  goto 88


state 55
	sentenciaEjecutable : identificador '(' parametrosProc . ')' ';'  (29)

	')'  shift 89
	.  error


state 56
	parametrosProc : parametro .  (16)
	parametrosProc : parametro . ',' parametro  (17)
	parametrosProc : parametro . ',' parametro ',' parametro  (18)

	','  shift 90
	')'  reduce 16


state 57
	constante : CTE .  (73)

	.  reduce 73


state 58
	constante : '-' . CTE  (74)

	CTE  shift 91
	.  error


state 59
	factor : identificador .  (63)

	.  reduce 63


state 60
	factor : constante .  (62)

	.  reduce 62


state 61
	asignacion : identificador '=' expresion . ';'  (55)
	expresion : expresion . '+' termino  (56)
	expresion : expresion . '-' termino  (57)

	'+'  shift 92
	'-'  shift 93
	';'  shift 94
	.  error


state 62
	expresion : termino .  (58)
	termino : termino . '*' factor  (59)
	termino : termino . '/' factor  (60)

	'*'  shift 95
	'/'  shift 96
	'+'  reduce 58
	'-'  reduce 58
	';'  reduce 58


state 63
	termino : factor .  (61)

	.  reduce 61


state 64
	sentenciaDeclarativa : error . listaVariables ';'  (8)
	bloqueProc : '{' error . '}'  (22)

	error  shift 19
	ID  shift 2
	'}'  shift 97
	.  error

	listaVariables  goto 20
	identificador  goto 21


state 65
	bloque : sentenciaDeclarativa .  (25)

	.  reduce 25


state 66
	bloque : sentenciaEjecutable .  (26)

	.  reduce 26


state 67
	bloqueProc : '{' bloque . '}'  (21)
	bloque : bloque . sentenciaDeclarativa  (23)
	bloque : bloque . sentenciaEjecutable  (24)

	error  shift 1
	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	INTEGER  shift 6
	FLOAT  shift 7
	PROC  shift 8
	'}'  shift 98
	.  error

	sentenciaDeclarativa  goto 99
	sentenciaEjecutable  goto 100
	tipo  goto 13
	declaracionProcedimiento  goto 14
	identificador  goto 15
	encabezadoProc  goto 16
	asignacion  goto 17
	cicloFor  goto 18


state 68
	listaVariables : listaVariables ',' identificador .  (9)

	.  reduce 9


state 69
	comparador : "<=" .  (64)

	.  reduce 64


state 70
	comparador : ">=" .  (65)

	.  reduce 65


state 71
	comparador : "!=" .  (66)

	.  reduce 66


state 72
	comparador : "==" .  (67)

	.  reduce 67


state 73
	comparador : '>' .  (68)

	.  reduce 68


state 74
	comparador : '<' .  (69)

	.  reduce 69


state 75
	condicion : identificador comparador . asignacion  (41)
	condicion : identificador comparador . identificador  (42)
	condicion : identificador comparador . constante  (43)

	ID  shift 2
	CTE  shift 57
	'-'  shift 58
	.  error

	identificador  goto 101
	asignacion  goto 102
	constante  goto 103


state 76
	cuerpoCompleto : '(' condicionIf ')' . '{' bloqueThen '}' ELSE '{' bloqueElse '}'  (50)
	cuerpoIncompleto : '(' condicionIf ')' . '{' bloqueThen '}'  (54)

	'{'  shift 104
	.  error


state 77
	sentenciaEjecutable : OUT '(' error ')' . ';'  (33)

	';'  shift 105
	.  error


state 78
	sentenciaEjecutable : OUT '(' CADENA ')' . ';'  (28)

	';'  shift 106
	.  error


state 79
	cicloFor : FOR '(' error ')' . '{' bloqueSentencia '}'  (36)

	'{'  shift 107
	.  error


state 80
	inicioFor : identificador '=' . constante  (40)

	CTE  shift 57
	'-'  shift 58
	.  error

	constante  goto 108


state 81
	cicloFor : FOR '(' condicionFor ')' . '{' bloqueSentencia '}'  (35)
	cicloFor : FOR '(' condicionFor ')' . '{' error '}'  (37)

	'{'  shift 109
	.  error


state 82
	condicionFor : inicioFor ';' . condiFOR ';' incDec  (38)

	ID  shift 2
	.  error

	identificador  goto 39
	condiFOR  goto 110
	condicion  goto 111


state 83
	encabezadoProc : PROC identificador '(' error . ')' NA '=' CTE ',' NS '=' CTE  (15)
	parametro : error . identificador  (20)

	ID  shift 2
	')'  shift 112
	.  error

	identificador  goto 86


state 84
	encabezadoProc : PROC identificador '(' ')' . NA '=' CTE ',' NS '=' CTE  (14)

	NA  shift 113
	.  error


state 85
	encabezadoProc : PROC identificador '(' parametrosProc . ')' NA '=' CTE ',' NS '=' CTE  (13)

	')'  shift 114
	.  error


state 86
	parametro : error identificador .  (20)

	.  reduce 20


state 87
	sentenciaEjecutable : identificador '(' ')' ';' .  (30)

	.  reduce 30


state 88
	parametro : tipo identificador .  (19)

	.  reduce 19


state 89
	sentenciaEjecutable : identificador '(' parametrosProc ')' . ';'  (29)

	';'  shift 115
	.  error


state 90
	parametrosProc : parametro ',' . parametro  (17)
	parametrosProc : parametro ',' . parametro ',' parametro  (18)

	error  shift 52
	INTEGER  shift 6
	FLOAT  shift 7
	.  error

	tipo  goto 54
	parametro  goto 116


state 91
	constante : '-' CTE .  (74)

	.  reduce 74


state 92
	expresion : expresion '+' . termino  (56)

	ID  shift 2
	CTE  shift 57
	'-'  shift 58
	.  error

	identificador  goto 59
	constante  goto 60
	termino  goto 117
	factor  goto 63


state 93
	expresion : expresion '-' . termino  (57)

	ID  shift 2
	CTE  shift 57
	'-'  shift 58
	.  error

	identificador  goto 59
	constante  goto 60
	termino  goto 118
	factor  goto 63


state 94
	asignacion : identificador '=' expresion ';' .  (55)

	.  reduce 55


state 95
	termino : termino '*' . factor  (59)

	ID  shift 2
	CTE  shift 57
	'-'  shift 58
	.  error

	identificador  goto 59
	constante  goto 60
	factor  goto 119


state 96
	termino : termino '/' . factor  (60)

	ID  shift 2
	CTE  shift 57
	'-'  shift 58
	.  error

	identificador  goto 59
	constante  goto 60
	factor  goto 120


state 97
	bloqueProc : '{' error '}' .  (22)

	.  reduce 22


state 98
	bloqueProc : '{' bloque '}' .  (21)

	.  reduce 21


state 99
	bloque : bloque sentenciaDeclarativa .  (23)

	.  reduce 23


state 100
	bloque : bloque sentenciaEjecutable .  (24)

	.  reduce 24


state 101
	condicion : identificador comparador identificador .  (42)
	asignacion : identificador . '=' expresion ';'  (55)

	'='  shift 34
	';'  reduce 42
	')'  reduce 42


state 102
	condicion : identificador comparador asignacion .  (41)

	.  reduce 41


state 103
	condicion : identificador comparador constante .  (43)

	.  reduce 43


state 104
	cuerpoCompleto : '(' condicionIf ')' '{' . bloqueThen '}' ELSE '{' bloqueElse '}'  (50)
	cuerpoIncompleto : '(' condicionIf ')' '{' . bloqueThen '}'  (54)

	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	.  error

	sentenciaEjecutable  goto 121
	identificador  goto 15
	asignacion  goto 17
	cicloFor  goto 18
	bloqueSentencia  goto 122
	bloqueThen  goto 123


state 105
	sentenciaEjecutable : OUT '(' error ')' ';' .  (33)

	.  reduce 33


state 106
	sentenciaEjecutable : OUT '(' CADENA ')' ';' .  (28)

	.  reduce 28


state 107
	cicloFor : FOR '(' error ')' '{' . bloqueSentencia '}'  (36)

	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	.  error

	sentenciaEjecutable  goto 121
	identificador  goto 15
	asignacion  goto 17
	cicloFor  goto 18
	bloqueSentencia  goto 124


state 108
	inicioFor : identificador '=' constante .  (40)

	.  reduce 40


state 109
	cicloFor : FOR '(' condicionFor ')' '{' . bloqueSentencia '}'  (35)
	cicloFor : FOR '(' condicionFor ')' '{' . error '}'  (37)

	error  shift 125
	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	.  error

	sentenciaEjecutable  goto 121
	identificador  goto 15
	asignacion  goto 17
	cicloFor  goto 18
	bloqueSentencia  goto 126


state 110
	condicionFor : inicioFor ';' condiFOR . ';' incDec  (38)

	';'  shift 127
	.  error


state 111
	condiFOR : condicion .  (39)

	.  reduce 39


state 112
	encabezadoProc : PROC identificador '(' error ')' . NA '=' CTE ',' NS '=' CTE  (15)

	NA  shift 128
	.  error


state 113
	encabezadoProc : PROC identificador '(' ')' NA . '=' CTE ',' NS '=' CTE  (14)

	'='  shift 129
	.  error


state 114
	encabezadoProc : PROC identificador '(' parametrosProc ')' . NA '=' CTE ',' NS '=' CTE  (13)

	NA  shift 130
	.  error


state 115
	sentenciaEjecutable : identificador '(' parametrosProc ')' ';' .  (29)

	.  reduce 29


state 116
	parametrosProc : parametro ',' parametro .  (17)
	parametrosProc : parametro ',' parametro . ',' parametro  (18)

	','  shift 131
	')'  reduce 17


state 117
	expresion : expresion '+' termino .  (56)
	termino : termino . '*' factor  (59)
	termino : termino . '/' factor  (60)

	'*'  shift 95
	'/'  shift 96
	'+'  reduce 56
	'-'  reduce 56
	';'  reduce 56


state 118
	expresion : expresion '-' termino .  (57)
	termino : termino . '*' factor  (59)
	termino : termino . '/' factor  (60)

	'*'  shift 95
	'/'  shift 96
	'+'  reduce 57
	'-'  reduce 57
	';'  reduce 57


state 119
	termino : termino '*' factor .  (59)

	.  reduce 59


state 120
	termino : termino '/' factor .  (60)

	.  reduce 60


state 121
	bloqueSentencia : sentenciaEjecutable .  (47)

	.  reduce 47


state 122
	bloqueSentencia : bloqueSentencia . sentenciaEjecutable  (46)
	bloqueThen : bloqueSentencia .  (52)

	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	'}'  reduce 52

	sentenciaEjecutable  goto 132
	identificador  goto 15
	asignacion  goto 17
	cicloFor  goto 18


state 123
	cuerpoCompleto : '(' condicionIf ')' '{' bloqueThen . '}' ELSE '{' bloqueElse '}'  (50)
	cuerpoIncompleto : '(' condicionIf ')' '{' bloqueThen . '}'  (54)

	'}'  shift 133
	.  error


state 124
	cicloFor : FOR '(' error ')' '{' bloqueSentencia . '}'  (36)
	bloqueSentencia : bloqueSentencia . sentenciaEjecutable  (46)

	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	'}'  shift 134
	.  error

	sentenciaEjecutable  goto 132
	identificador  goto 15
	asignacion  goto 17
	cicloFor  goto 18


state 125
	cicloFor : FOR '(' condicionFor ')' '{' error . '}'  (37)

	'}'  shift 135
	.  error


state 126
	cicloFor : FOR '(' condicionFor ')' '{' bloqueSentencia . '}'  (35)
	bloqueSentencia : bloqueSentencia . sentenciaEjecutable  (46)

	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	'}'  shift 136
	.  error

	sentenciaEjecutable  goto 132
	identificador  goto 15
	asignacion  goto 17
	cicloFor  goto 18


state 127
	condicionFor : inicioFor ';' condiFOR ';' . incDec  (38)

	UP  shift 137
	DOWN  shift 138
	.  error

	incDec  goto 139


state 128
	encabezadoProc : PROC identificador '(' error ')' NA . '=' CTE ',' NS '=' CTE  (15)

	'='  shift 140
	.  error


state 129
	encabezadoProc : PROC identificador '(' ')' NA '=' . CTE ',' NS '=' CTE  (14)

	CTE  shift 141
	.  error


state 130
	encabezadoProc : PROC identificador '(' parametrosProc ')' NA . '=' CTE ',' NS '=' CTE  (13)

	'='  shift 142
	.  error


state 131
	parametrosProc : parametro ',' parametro ',' . parametro  (18)

	error  shift 52
	INTEGER  shift 6
	FLOAT  shift 7
	.  error

	tipo  goto 54
	parametro  goto 143


state 132
	bloqueSentencia : bloqueSentencia sentenciaEjecutable .  (46)

	.  reduce 46


state 133
	cuerpoCompleto : '(' condicionIf ')' '{' bloqueThen '}' . ELSE '{' bloqueElse '}'  (50)
	cuerpoIncompleto : '(' condicionIf ')' '{' bloqueThen '}' .  (54)

	ELSE  shift 144
	END_IF  reduce 54


state 134
	cicloFor : FOR '(' error ')' '{' bloqueSentencia '}' .  (36)

	.  reduce 36


state 135
	cicloFor : FOR '(' condicionFor ')' '{' error '}' .  (37)

	.  reduce 37


state 136
	cicloFor : FOR '(' condicionFor ')' '{' bloqueSentencia '}' .  (35)

	.  reduce 35


state 137
	incDec : UP . constante  (44)

	CTE  shift 57
	'-'  shift 58
	.  error

	constante  goto 145


state 138
	incDec : DOWN . constante  (45)

	CTE  shift 57
	'-'  shift 58
	.  error

	constante  goto 146


state 139
	condicionFor : inicioFor ';' condiFOR ';' incDec .  (38)

	.  reduce 38


state 140
	encabezadoProc : PROC identificador '(' error ')' NA '=' . CTE ',' NS '=' CTE  (15)

	CTE  shift 147
	.  error


state 141
	encabezadoProc : PROC identificador '(' ')' NA '=' CTE . ',' NS '=' CTE  (14)

	','  shift 148
	.  error


state 142
	encabezadoProc : PROC identificador '(' parametrosProc ')' NA '=' . CTE ',' NS '=' CTE  (13)

	CTE  shift 149
	.  error


state 143
	parametrosProc : parametro ',' parametro ',' parametro .  (18)

	.  reduce 18


state 144
	cuerpoCompleto : '(' condicionIf ')' '{' bloqueThen '}' ELSE . '{' bloqueElse '}'  (50)

	'{'  shift 150
	.  error


state 145
	incDec : UP constante .  (44)

	.  reduce 44


state 146
	incDec : DOWN constante .  (45)

	.  reduce 45


state 147
	encabezadoProc : PROC identificador '(' error ')' NA '=' CTE . ',' NS '=' CTE  (15)

	','  shift 151
	.  error


state 148
	encabezadoProc : PROC identificador '(' ')' NA '=' CTE ',' . NS '=' CTE  (14)

	NS  shift 152
	.  error


state 149
	encabezadoProc : PROC identificador '(' parametrosProc ')' NA '=' CTE . ',' NS '=' CTE  (13)

	','  shift 153
	.  error


state 150
	cuerpoCompleto : '(' condicionIf ')' '{' bloqueThen '}' ELSE '{' . bloqueElse '}'  (50)

	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	.  error

	sentenciaEjecutable  goto 121
	identificador  goto 15
	asignacion  goto 17
	cicloFor  goto 18
	bloqueSentencia  goto 154
	bloqueElse  goto 155


state 151
	encabezadoProc : PROC identificador '(' error ')' NA '=' CTE ',' . NS '=' CTE  (15)

	NS  shift 156
	.  error


state 152
	encabezadoProc : PROC identificador '(' ')' NA '=' CTE ',' NS . '=' CTE  (14)

	'='  shift 157
	.  error


state 153
	encabezadoProc : PROC identificador '(' parametrosProc ')' NA '=' CTE ',' . NS '=' CTE  (13)

	NS  shift 158
	.  error


state 154
	bloqueSentencia : bloqueSentencia . sentenciaEjecutable  (46)
	bloqueElse : bloqueSentencia .  (53)

	ID  shift 2
	IF  shift 3
	OUT  shift 4
	FOR  shift 5
	'}'  reduce 53

	sentenciaEjecutable  goto 132
	identificador  goto 15
	asignacion  goto 17
	cicloFor  goto 18


state 155
	cuerpoCompleto : '(' condicionIf ')' '{' bloqueThen '}' ELSE '{' bloqueElse . '}'  (50)

	'}'  shift 159
	.  error


state 156
	encabezadoProc : PROC identificador '(' error ')' NA '=' CTE ',' NS . '=' CTE  (15)

	'='  shift 160
	.  error


state 157
	encabezadoProc : PROC identificador '(' ')' NA '=' CTE ',' NS '=' . CTE  (14)

	CTE  shift 161
	.  error


state 158
	encabezadoProc : PROC identificador '(' parametrosProc ')' NA '=' CTE ',' NS . '=' CTE  (13)

	'='  shift 162
	.  error


state 159
	cuerpoCompleto : '(' condicionIf ')' '{' bloqueThen '}' ELSE '{' bloqueElse '}' .  (50)

	.  reduce 50


state 160
	encabezadoProc : PROC identificador '(' error ')' NA '=' CTE ',' NS '=' . CTE  (15)

	CTE  shift 163
	.  error


state 161
	encabezadoProc : PROC identificador '(' ')' NA '=' CTE ',' NS '=' CTE .  (14)

	.  reduce 14


state 162
	encabezadoProc : PROC identificador '(' parametrosProc ')' NA '=' CTE ',' NS '=' . CTE  (13)

	CTE  shift 164
	.  error


state 163
	encabezadoProc : PROC identificador '(' error ')' NA '=' CTE ',' NS '=' CTE .  (15)

	.  reduce 15


state 164
	encabezadoProc : PROC identificador '(' parametrosProc ')' NA '=' CTE ',' NS '=' CTE .  (13)

	.  reduce 13


37 terminals, 33 nonterminals
75 grammar rules, 165 states
